@@ -71,12 +71,45 @@ you will have to confirm that it is correct.
 
 </para><note><para>
 
+The <command>ssh</command> server in the installer uses a default
+configuration that does not send keep-alive packets. In principle,
+a connection to the system being installed should be kept open
+indefinitely. However, in some situations &mdash; depending on your
+local network setup &mdash; the connection may be lost after some
+period of inactivity. One common case where this can happen is when
+there is some form of Network Address Translation (NAT) somewhere 
+between the client and the system being installed. Depending on at
+which point of the installation the connection was lost, you may or
+may not be able to resume the installation after reconnecting.
+
+</para><para>
+
+You may be able to avoid the connection being dropped by adding the option
+<userinput>-o&nbsp;ServerAliveInterval=<replaceable>value</replaceable></userinput>
+when starting the <command>ssh</command> connection, or by adding that
+option in your <command>ssh</command> configuration file. Note however
+that in some cases adding this option may also <emphasis>cause</emphasis>
+a connection to be dropped (for example if keep-alive packets are sent
+during a brief network outage, from which <command>ssh</command> would
+otherwise have recovered), so it should only be used when needed.
+
+</para></note>
+
+<note><para>
+
 If you install several computers in turn and they happen to have the
 same IP address or hostname, <command>ssh</command> will refuse to connect
 to such host. The reason is that it will have different fingerprint, which
 is usually a sign of a spoofing attack. If you are sure this is not the
 case, you will need to delete the relevant line from
-<filename>~/.ssh/known_hosts</filename> and try again.
+<filename>~/.ssh/known_hosts</filename><footnote>
+
+<para>
+The following command will remove an existing entry for a host:
+<command>ssh-keygen -R &lt;<replaceable>hostname</replaceable>|<replaceable>IP&nbsp;address</replaceable>&gt;</command>.
+</para>
+
+</footnote> and try again.
 
 </para></note><para>
 
