@@ -79,13 +79,16 @@ installation-guide (2007xxxx) UNRELEASED; urgency=low
       the selected location can be set (as that is a FAQ)
     - improve readability of partman section by using separate subsections for
       guided and manual partitioning
+    - network-console: add information about dropped connections and how to
+      avoid that (closes: #458154); add footnote with command to remove a host
+      from the known_hosts file
   * howto, preseed: update for reordering of the installation procedure.
 
   [ Colin Watson ]
   * Use &releasename; rather than hardcoding etch in sources.list
     recommendation for chroot installs. Closes: #458459.
 
- -- Frans Pop <fjp@debian.org>  Sun, 30 Dec 2007 12:59:38 +0100
+ -- Frans Pop <fjp@debian.org>  Mon, 07 Jan 2008 22:20:23 +0100
 
 installation-guide (20070319) unstable; urgency=low
 
